# newton-osc

./: .gitignore  AGENT_GUIDE.md  BEST_RECIPE.md  CLAUDE.md  MEMORY.md  README.md  SQUARE_PEG_PLAN.md  bare_arm_view.py  controllers.py  controllers_warp.py  env_view.py  imgui.ini  joint_play_square.py  osc_track_demo.py  peg_env.py  peg_env_square.py  peg_in_hole_view.py  peg_reward.py  peg_scene_newton.py  peg_scene_square.py  pyproject.toml  replay_record.py  smoke_batch.py  train_peg_flashsac.py  train_peg_osc.py  train_peg_ppo.py  vic_decouple_record.py  vic_ellipsoid_record.py  vic_graph_test.py  vic_noise_eval.py  vic_noise_plot.py  vic_noise_viz_record.py  vic_plot.py
.context/: training-osc-peg.md
.context/journal/: 2026-06-25-flashsac-utd-variable-impedance-square.md  2026-06-26-single-env-perf-warp-osc-cuda-graph.md
.context/lessons/: osc-implementation-and-the-scrambled-jacobian.md  osc-joint-f-cancelled-by-imported-actuators.md
.temp/: probe_batch.py  smoke_batch.py
.temp/handoff/: 2026-06-24_1113_handoff.md
analysis/: vic_corr_noise_eval.py  vic_corr_noise_plot.py  vic_decouple_record.py  vic_noise_eval.py  vic_noise_plot.py  vic_rollout_bench.py  vic_warp_test.py
archive/: peg_scene_newton.py  train_peg.py  vic_analyze.py
jax_rl/algos/: fast_sac.py  flash_sac.py  ppo.py
jax_rl/buffers/: __init__.py  jax_replay_buffer.py  rollout.py
jax_rl/configs/: __init__.py  fast_sac_config.py  flash_sac_config.py  networks_config.py  ppo_config.py
old/: franka_batch_env.py  g1_franka_compose.py  g1_franka_play.py  hello_newton.py  main.py
(+22 files in other folders)
